# app-stater

./: .dockerignore  .gitignore  .release-please-manifest.json  Cargo.toml  Dockerfile  LICENSE  Makefile  deny.toml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  release-please-config.json
.github/: renovate.json
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml  test.yml  weekly.yml
.sqlx/: query-2ca3762f8c3c56be84582257745d294bc303ad5dfccad55f6eba380cc86fd95d.json  query-49398422a3e5f7738ce9f114d989271f71694c4a4d9c3fed7935849d2a1ecf8e.json  query-d5a6b57a22d6abc13d05c864e571744319177d7253531d83935a46f51619a43d.json  query-dff68e09d9e30923a2dfd94de067cbb6b8f96717dfafa52519680115a95cc6f6.json
api/: Cargo.toml
api/src/: config.rs  feed.rs  lib.rs
app/: CHANGELOG.md  Cargo.toml
app/end2end/: package-lock.json
app/i18n/en/: starter_app.ftl
app/i18n/fr/: starter_app.ftl
app/migrations/: 20230911205502_init.down.sql  20230911205502_init.up.sql
app/public/css/: index.css
app/public/css/feed/: index.css
app/src/: app.rs  config.rs  context.rs  i18n.rs  lib.rs  routes.rs  state.rs  subscriber.rs
app/src/api/: feed.rs
app/src/component/: page.rs
app/src/components/: error.rs  htmx.rs  mod.rs  page.rs
app/src/router/: mod.rs
app/src/router/feed/: mod.rs
app/src/routes/: api.rs  component.rs  feed.rs  index.rs  mod.rs  page.rs  root.rs  subscriber.rs
app/src/routes/feed/: index.rs  mod.rs  page.rs
app/styles/: index.config.js
app/styles/feed/: index.config.js  index.css
cli/: Cargo.toml
cli/src/: main.rs
client/: CHANGELOG.md  Cargo.toml
client/proto/starter/: feed.proto
client/src/: feed.rs  lib.rs
components/: Cargo.toml
components/src/: lib.rs  page.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  state.rs
core/src/axum_extra/: mod.rs
core/src/axum_extra/user_lang/: config.rs  mod.rs  source.rs
core/src/axum_extra/user_lang/sources/: header.rs  mod.rs  path.rs  query.rs
feed/: CHANGELOG.md  Cargo.toml
feed/proto/starter/: feed.proto
feed/src/: aggregate.rs  api.rs  command.rs  event.rs  lib.rs
feed/src/app/: mod.rs
feed/src/projection/: feeds.rs  mod.rs  tags_count.rs
feed/src/query/: feeds.rs  mod.rs  tags_count.rs
feed/tests/: command.rs  common.rs
leptos-island/: Cargo.toml
leptos-island/src/: main.rs
migrations/: 20230911205502_init.down.sql  20230911205502_init.up.sql  20230911305502_evento.down.sql  20230911305502_evento.up.sql
starter/: Cargo.toml
starter-app/: CHANGELOG.md  Cargo.toml
starter-app/src/: app.rs  config.rs  main.rs
starter-app/src/api/: feed.rs  mod.rs
starter-cli/: CHANGELOG.md  Cargo.toml
starter-cli/src/: main.rs
starter-client/: Cargo.toml  build.rs
starter-client/proto/timada/: starter.proto
starter-client/src/: lib.rs
web/: Cargo.toml  i18n.toml
web/_src/: config.rs  lib.rs  routes.rs  state.rs  subscriber.rs
web/_src/components/: mod.rs
web/_src/routes/: feed.rs  index.rs
web/e2e/: example.spec.ts
web/i18n/en/: starter_web.ftl
web/i18n/fr/: starter_web.ftl
web/public/: main.css
web/public/htmx/: sse.min.js
web/src/: assets.rs  config.rs  context.rs  lib.rs  pages.rs
web/src/pages/: error.rs  feed.rs  index.rs
web/src/pages/feed/: index.rs
web/templates/: 404.html  500.html  _base.html  _layout.html  create_feed_form.html  feed_item.html  feeds_list.html  index.html
web/templates/feed/: index.html
