[package]
name = "starter-api"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
timada-starter-feed = { path = "../feed", features = ["proto"], version = "0.3.0" }
anyhow = "1.0.75"
tonic = { version = "0.10.0", features = ["tls"] }
prost = "0.12.0"
tokio = "1.32.0"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
serde = "1.0.188"
config = "0.13.3"
