[package]
name = "starter-api"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
timada-starter-client = { path = "../client", features = ["proto"], version = "0.6.0" }
anyhow = "1.0.75"
tonic = { version = "0.10.2", features = ["tls"] }
tracing = "0.1.39"
serde = "1.0.189"
config = "0.13.3"
