[package]
name = "starter-app"
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
starter-core = { path = "../core", version = "0.3.1" }
timada-starter-feed = { path = "../feed", version = "0.3.1" }
axum = "0.6.20"
anyhow = "1.0.75"
leptos = "0.5.0-rc1"
tokio = "1.32.0"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
serde = "1.0.188"
config = "0.13.3"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
i18n-embed = { version = "0.14.0", features = ["fluent-system"] }
i18n-embed-fl = "0.7.0"
once_cell = "1.18.0"
unic-langid = "0.9.1"
http = "0.2.9"
twa-jwks = { version = "1.2.0", features = ["axum"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
evento = "0.6.3"
evento-axum = "0.6.3"
evento-query = "0.6.3"
validator = { version = "0.16.1", features = ["derive"] }
ulid = "1.1.0"
