[package]
name = "starter-app"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
starter-core = { path = "../core", version = "0.6.0" }
starter-feed = { path = "../feed", version = "0.6.0" }
axum = "0.7.2"
anyhow = "1.0.75"
leptos = "0.5.4"
tokio = "1.34.0"
tracing = "0.1.40"
serde = "1.0.193"
config = "0.13.4"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
i18n-embed = { version = "0.14.1", features = ["fluent-system"] }
i18n-embed-fl = "0.7.0"
once_cell = "1.18.0"
unic-langid = "0.9.1"
http = "0.2.11"
twa-jwks = { version = "1.2.6", features = ["axum"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
evento = "0.9.1"
evento-query = "0.9.1"
validator = { version = "0.16.1", features = ["derive"] }
ulid = "1.1.0"
chrono = { version = "0.4.31", features = ["unstable-locales"] }
pikav-client = "0.20.5"
futures = "0.3.29"
minify-html = "0.11.1"
