[package]
name = "starter-cli"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
starter-app = { path = "../app", version = "0.6.0" }
starter-api = { path = "../api", version = "0.6.0" }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
clap = "4.4.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
