[package]
name = "timada-starter-client"
version = "0.3.1"
publish = true
edition = "2021"
license = "AGPL-3.0"
description = "A client for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"
documentation = "https://docs.rs/timada-starter-client"

[dependencies]
timada-starter-feed = { path = "../feed", features = ["proto"], version = "0.3.1", optional = true }
tonic = { version = "0.10.1", features = ["tls"] }
http = "0.2.9"

[features]
default = []
all = ["feed"]
feed = ["dep:timada-starter-feed"]
