[package]
name = "timada-starter-client"
version = "0.3.1"
publish = true
edition = "2021"
license = "AGPL-3.0"
description = "A client for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"
documentation = "https://docs.rs/timada-starter-client"

[dependencies]
tonic = { version = "0.10.2", features = ["tls"] }
http = "0.2.9"
prost = { version = "0.12.1", optional = true }
prost-types = { version = "0.12.1", optional = true }
prost-derive = { version = "0.12.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }

[features]
default = []
all = ["feed"]
proto = [
    "dep:prost",
    "dep:prost-types",
    "dep:prost-derive"
]
feed = ["proto"]
