[package]
name = "timada-starter-client"
version = "0.6.0"
publish = true
edition = "2021"
license = "AGPL-3.0"
description = "A client for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"
documentation = "https://docs.rs/timada-starter-client"

[dependencies]
tonic = { version = "0.10.2", features = ["tls"] }
http = "0.2.11"
prost = { version = "0.12.3", optional = true }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }

[features]
default = []
all = ["feed"]
proto = [
	"dep:prost",
]
feed = ["proto"]

[package.metadata.cargo-machete]
ignored = ["prost"]
