[package]
name = "starter-feed"
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0"
description = "Feed module for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"

[dependencies]
evento = "0.9.1"
evento-query = "0.9.1"
anyhow = "1.0.75"
ulid = "1.1.0"
parse-display = "0.8.2"
serde = "1.0.188"
serde_json = "1.0.107"
validator = { version = "0.16.1", features = ["derive"] }
tracing = "0.1.37"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
futures = "0.3.28"
fake = "2.8.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
futures-util = "0.3.28"
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
