[package]
name = "starter-feed"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0"
description = "Feed module for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"

[dependencies]
evento = "0.9.1"
evento-query = "0.9.1"
anyhow = "1.0.75"
ulid = "1.1.0"
parse-display = "0.8.2"
serde = "1.0.192"
validator = { version = "0.16.1", features = ["derive"] }
tracing = "0.1.40"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
futures = "0.3.29"
fake = "2.9.1"
rand = "0.8.5"

[dependencies.uuid]
version = "1.5.0"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
]

[dev-dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
futures-util = "0.3.29"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
