[package]
name = "starter-feed"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0"
description = "Feed module for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"

[dependencies]
evento = { version = "1.0.0-alpha.7", features = ["pg"] }
evento-query = { version = "1.0.0-alpha.7", features = ["pg"] }
anyhow = "1.0.76"
ulid = "1.1.0"
parse-display = "0.8.2"
serde = "1.0.193"
validator = { version = "0.16.1", features = ["derive"] }
tracing = "0.1.40"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
futures = "0.3.30"
fake = "2.9.2"
rand = "0.8.5"
async-trait = "0.1.75"

[dependencies.uuid]
version = "1.6.1"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
]

[dev-dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
