[package]
name = "starter-web"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
starter-feed = { path = "../feed", version = "0.7.0" }
axum = "0.7.4"
anyhow = "1.0.79"
tokio = "1.35.1"
tracing = "0.1.40"
serde = "1.0.195"
config = "0.13.4"
rust-embed = "8.2.0"
mime_guess = "2.0.4"
i18n-embed = { version = "0.14.1", features = ["fluent-system"] }
i18n-embed-fl = "0.7.0"
once_cell = "1.19.0"
unic-langid = "0.9.4"
twa-jwks = { version = "1.2.11", features = ["axum"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
evento = { version = "1.0.0-alpha.8", features = ["pg"] }
evento-query = { version = "1.0.0-alpha.8", features = ["pg"] }
evento-axum = { version = "1.0.0-alpha.8" }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["unstable-locales"] }
pikav-client = "0.20.10"
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
